<resources>
    <string name="app_name">Pikul</string>
    <string-array name="product_categories">
        <item>Batagor</item>
        <item>Cappucino Cincau</item>
        <item>Cilor</item>
        <item>Cireng</item>
        <item>Cilok</item>
        <item>Crepes</item>
        <item>Dawet</item>
        <item>Piscok</item>
        <item>Risol</item>
        <item>Risol Mayo</item>
        <item>Tahu Bulat</item>
        <item>Siomay</item>
    </string-array>

    <string-array name="provinces">
        <item>Aceh</item>
        <item>Sumatra Utara</item>
        <item>Sumatra Barat</item>
        <item>Riau</item>
        <item>Jambi</item>
        <item>Sumtra Selatan</item>
        <item>Bengkulu</item>
        <item>Lampung</item>
        <item>Kepulauan Riau</item>
        <item>Kepulauan Bangka Belitung</item>

        <item>DKI Jakarta</item>
        <item>Jawa Barat</item>
        <item>Jawa Tengah</item>
        <item>DI Yogyakarta</item>
        <item>Jawa Timur</item>
        <item>Banten</item>

        <item>Bali</item>
        <item>Nusa Tenggara Barat</item>
        <item>Nusa Tenggara Timur</item>

        <item>Kalimantan Barat</item>
        <item>Kalimantan Tengah</item>
        <item>Kalimantan Selatan</item>
        <item>Kalimantan Timur</item>
        <item>Kalimantan Utara</item>

        <item>Sulawesi Utara</item>
        <item>Sulawesi Tengah</item>
        <item>Sulawesi Selatan</item>
        <item>Sulawesi Tenggara</item>
        <item>Sulawesi Barat</item>
        <item>Gorontalo</item>

        <item>Maluku</item>
        <item>Maluku Utara</item>

        <item>Papua</item>
        <item>Papua Barat</item>
        <item>Papua Selatan</item>
        <item>Papua Tengah</item>
        <item>Papua Pegunungan</item>
        <item>Papua Barat Daya</item>
    </string-array>

    <!--  LOGIN ACTIVITY  -->
    <string name="txt_button_login">LOGIN</string>
    <string name="txt_hint_password">Password</string>
    <string name="txt_hint_email">Email</string>
    <string name="txt_welcome_description">Silahkan login terlebih dahulu dengan menggunakan username dan password anda.</string>
    <string name="txt_welcome_back">Selamat Datang Kembali!</string>
    <string name="txt_do_not_have_account">Belum punya akun?</string>
    <string name="txt_login_success">Login Berhasil</string>
    <string name="txt_button_register">Daftar</string>

    <!--  REGISTER ACTIVITY  -->
    <string name="name_too_short">Nama terlalu singkat</string>
    <string name="txt_already_have_account">Sudah punya akun?</string>
    <string name="txt_welcome_newcomer">Halo, Selamat Datang!</string>
    <string name="txt_welcome_register_description">Silahkan buat akun terlebih dahulu sebelum masuk ke aplikasi.</string>
    <string name="txt_hint_password_confirmation">Konfirmasi Password</string>
    <string name="txt_hint_name">Nama</string>
    <string name="empty_name">Nama tidak boleh kosong</string>
    <string name="empty_email">Email tidak boleh kosong</string>
    <string name="empty_password">Password tidak boleh kosong</string>
    <string name="pass_not_match">Password tidak cocok</string>
    <string name="invalid_email">Format email tidak valid</string>
    <string name="invalid_password">Format Password Tidak Valid</string>
    <string name="txt_hint_password_best_practice">Harus berisi Huruf besar, Huruf kecil, Angka dan paling sedikit 8 karakter</string>
    <string name="txt_loading">Loading</string>


    <!--  BOTTOM NAV  -->
    <string name="txt_bottom_nav_title_home">Home</string>
    <string name="txt_bottom_nav_title_maps">Maps</string>
    <string name="txt_bottom_nav_title_chat">Chat</string>
    <string name="txt_bottom_nav_title_transaction">Transaction</string>
    <string name="txt_bottom_nav_job_vacancy">Pekerjaan</string>

    <!--  HOME FRAGMENT  -->
    <string name="txt_btn_see_all">Semua</string>
    <string name="txt_section_title_nearby_merchant">Pedagang Disekitar</string>
    <string name="txt_section_title_popular_food">Makanan Populer</string>
    <string name="txt_section_title_category">Kategori</string>

    <!--  MAPS FRAGMENT  -->
    <string name="txt_your_location">Lokasi Anda</string>
    <string name="txt_dialog_title_enable_location">Aktifkan Layanan Lokasi?</string>
    <string name="txt_dialog_desc_enable_location_service">Aplikasi ini membutuhkan anda untuk mengaktifkan layanan lokasi agar dapat menyesuaikan informasi berdasarkan lokasi anda.</string>
    <string name="txt_dialog_btn_open_settings">Buka Pengaturan</string>
    <string name="retry">Coba Lagi</string>
    <string name="cancel">Batalkan</string>
    <string name="txt_location_permission_granted">Ijin Lokasi Diberikan</string>

    <!--  CHAT HISTORY FRAGMENT  -->
    <string name="txt_chat_title">Percakapan</string>
    <!--  CHAT ROOM FRAGMENT  -->
    <string name="txt_today">Hari ini</string>
    <string name="txt_yesterday">Kemarin</string>
    <string name="txt_typing">mengetik…</string>
    <string name="txt_write_your_message">Pesan</string>
    <!--  TRANSACTION FRAGMENT  -->
    <string name="txt_chat_transaction">Transaksi</string>
    <string name="txt_tab_title_completed_order">Selesai</string>
    <string name="txt_tab_title_ongoing_order">Berlangsung</string>
    <!--  MESSAGE INFO FRAGMENT  -->
    <string name="txt_been_read">Telah Dibaca</string>
    <string name="txt_been_sent">Telah Terkirim</string>
    <string name="txt_fragment_message_info">Informasi Pesan</string>

    <!--  Detail Brand Activity  -->
    <string name="txt_btn_order">Pesan</string>
    <string name="tv_title_category">Kategori</string>
    <string name="tv_title_merchant">Pedagang</string>

    <!--  Select Business Role FRAGMENT  -->
    <string name="txt_btn_next">Lanjutkan</string>
    <string name="txt_business_owner">Pemilik Bisnis</string>
    <string name="txt_merchant">Pedagang</string>
    <!--  Merchant Register FRAGMENT  -->
    <string name="txt_province">Provinsi</string>
    <string name="txt_fragment_merchant_register">Pendaftaran Pedagang</string>
    <!--  CAMERA ACTIVITY  -->
    <string name="content_desc_btn_capture">capture button</string>
    <string name="content_desc_btn_switch_camera">switch camera button</string>
    <!--  REGISTER OWNER FRAGMENT  -->
    <string name="txt_hint_business_name">Nama Bisnis</string>
    <string name="txt_hint_phone_number">Nomor Telepon</string>
    <string name="txt_hint_address">Alamat Bisnis</string>
    <string name="txt_empty_phone_number">Nomor telepon bisnis tidak boleh kosong</string>
    <string name="txt_empty_business_address">Alamat bisnis tidak boleh kosong</string>
    <string name="txt_dialog_choosing_action">Pilih Aksi:</string>
    <string name="txt_dialog_item_gallery">Galeri</string>
    <string name="txt_dialog_item_camera">Kamera</string>
    <string name="txt_intent_title_choose_picture">Pilih Gambar</string>
    <string name="txt_failed_open_cam">Gagal membuka kamera</string>
    <string name="txt_success_capture_image">Berhasil mengambil gambar</string>
    <string name="txt_failed_capture_image">Gagal mengambil gambar</string>
    <string name="txt_error_permission_not_granted">Ijin tidak diberikan</string>
    <string name="txt_registration_success">Pendaftaran Berhasil</string>

    <!--  PROFILE ACTIVITY  -->
    <string name="txt_profile">Profile</string>
    <!--  MERCHANT PROFILE FRAGMENT  -->
    <string name="txt_btn_manage">Kelola</string>
    <string name="txt_btn_manage_product">Barang Dagangan</string>
    <string name="txt_btn_transaction">Transaksi Penjualan</string>
    <string name="txt_btn_user_review">Ulasan Pembeli</string>
    <string name="txt_btn_business_owner">Mitra Bisnis</string>
    <string name="txt_btn_logout">Keluar Akun</string>
    <string name="txt_btn_add_stop_point">Titik Berhenti</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_all_stop_point">Titik Penjualan</string>
    <string name="txt_btn_add_new_stop_point">Tambah Titik</string>
    <string name="txt_dialog_title_add_new_stop_point">Titik Baru</string>
    <string name="txt_btn_manage_merchant">Pedagang</string>
    <string name="txt_product">Produk</string>
    <string name="txt_selling">Penjualan Anda</string>
    <string name="txt_transaction">Transaksi</string>
    <string name="txt_add_product">Tambah Produk</string>
    <string name="txt_hint_product_name">Nama Produk</string>
    <string name="txt_hint_produt_category">Kategori</string>
    <string name="txt_hint_product_price">Harga</string>
    <string name="txt_btn_add">Tambah</string>
    <string name="txt_empty_product_category">Kategori Produk tidak boleh kosong</string>
    <string name="txt_empty_product_price">Harga tidak boleh kosong</string>
    <string name="txt_add_product_success">Berhasil menambah produk</string>
    <string name="txt_product_list">Daftar Produk</string>
    <string name="txt_manage_stock">Atur Stok</string>
    <string name="txt_dialog_action_delete">Hapus</string>
    <string name="txt_edit_product_success">Berhasil mengubah produk</string>
    <string name="txt_product_stock">Stok Produk</string>
    <string name="txt_dialog_title_update_product_stok">Ubah Stok</string>
    <string name="txt_dialog_gtn_edit">Ubah</string>
    <string name="txt_btn_edit_stock">Ubah Stok</string>
    <string name="tv_title_rating">Rating</string>
    <string name="txt_hint_business_desc">Deskripsi Bisnis</string>
    <string name="txt_hint_business_product_category">Kategori Produk</string>
    <string name="txt_btn_pay">Bayar Sekarang</string>
    <string name="txt_order_summary">Pesanan</string>
    <string name="txt_fragment_payment">Pembayaran</string>
    <string name="txt_tab_title_merchant_partner">Mitra Saya</string>
    <string name="txt_tab_title_merchant_list">Pedagang</string>
    <string name="txt_fragment_merchant_list">Daftar Pedagang</string>
    <string name="txt_fragment_your_merchant">Pedagang Anda</string>
    <string name="txt_hint_note_for_customer">Catatan untuk pelanggan</string>
    <string name="txt_screen_payment_success">Pembayaran Berhasil</string>
    <string name="txt_screen_detail_transaction">Detail Transaksi</string>
    <string name="txt_screen_detail_pickup_point">Titik Pengambilan Pesanan</string>
    <string name="txt_screen_job_vacancy">Lowongan Pekerjaan</string>
    <string name="txt_screen_owner_transaction_order">Pesanan</string>
    <string name="txt_screen_owner_transaction_list">Daftar Transaksi</string>
    <string name="txt_screen_search">Cari</string>
    <string name="txt_empty_business_product_category">Kategori produk yang anda jual tidak boleh kosong</string>

</resources>